src/main/resources/aws-java-starter-stack.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: AWS CloudFormation Template for a simple Java AWS Stack
Resources:
  JavaServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: allow connections from specified CIDR ranges
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 8080
        ToPort: 8080
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: 0.0.0.0/0
  JavaServerHost:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-013be31976ca2c322
      KeyName: aws-java-starter
      SecurityGroups:
      - !Ref JavaServerSecurityGroup
      UserData:
        "Fn::Base64":
          !Sub |
          #!/bin/bash -xe
          # Get the latest CloudFormation package
          yum update -y aws-cfn-bootstrap
          # Start cfn-init
          /opt/aws/bin/cfn-init -s ${AWS::StackId} -r JavaServerHost --region ${AWS::Region} || error_exit 'Failed to run cfn-init'
          # Start up the cfn-hup daemon to listen for changes to the EC2 instance metadata
          /opt/aws/bin/cfn-hup || error_exit 'Failed to start cfn-hup'
          # All done so signal success
          /opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackId} --resource JavaServerHost --region ${AWS::Region}
    Metadata:
      AWS::CloudFormation::Init:
        config:
          packages:
            yum:
              java-1.8.0-openjdk: []
          services:
            sysvinit:
              java:
                enabled: 'true'
                ensureRunning: 'true'
